Add html graph metadata

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Writing Prompt Generator</title>
+    <meta content="origin" name="referrer">
+    <meta content="Writing Prompt Generator" name="Description">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@jfhr_">
+    <meta name="twitter:creator" content="@jfhr_">
+    <meta property="og:title" content="Writing Prompt Generator">
+    <meta property="og:description" content="Random writing prompt generator. made by jfhr">
+    <meta property="og:image" content="https://jfhr.de/writing-prompt-generator/book.png">
+    <meta property="og:url" content="https://jfhr.de/writing-prompt-generator">
     <link rel="stylesheet" href="https://jfhr.de/assets/solar.bootstrap.min.css">
     <script src="index.js"></script>
 </head>
