Open github link in new tab

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </section>
         </main>
         <footer class="mt-3">
-            Open source by <a href="https://github.com/jfhr/writing-prompt-generator">jfhr</a>
+            Open source by <a href="https://github.com/jfhr/writing-prompt-generator" target="_blank">jfhr</a>
         </footer>
     </div>
 </body>
